--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	    - In: {{location}}</span>
             {{#else}}
-            - erere: {{location}}</span>
+            - Это для: {{location}}</span>
             {{/if}}
             </span>
         </li>
