--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li>
             <h2>{{name}}</h2>
             <p>{{update}}</p>
+            <p>{{ !!test.test!! }}</p>
             <span>
          Sent From: {{from}}
          {{#if location}}
