--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         {{#each updates}}
         <li>
-            <h2>{{name}}</h2>
+            <h2>{{name | tolowercase}}</h2>
             <p>{{update}}</p>
             <p>{{ !!test.test!! }}</p>
             <span>
